Done requested changes